[gd_scene load_steps=2 format=3 uid="uid://cw0s5g3bkwv2l"]

[ext_resource type="Script" path="res://scriptzzz/HUD.gd" id="1_b35k5"]

[node name="HUD" type="CanvasLayer"]
layer = 4
offset = Vector2(1, 0)
transform = Transform2D(1, 0, 0, 1, 1, 0)
script = ExtResource("1_b35k5")

[node name="PauseButton" type="Button" parent="."]
offset_left = 27.0
offset_top = 19.0
offset_right = 82.0
offset_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Pause"

[node name="PauseLayer" type="ColorRect" parent="."]
process_mode = 2
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0.552941)

[node name="PauseMenu" type="PanelContainer" parent="PauseLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -20.0
offset_right = 35.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="PauseLayer/PauseMenu"]
layout_mode = 2
text = "Resume"
